# pydantic-ai-chat-ui

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  WARP.md  devbox.json  pyproject.toml
.github/workflows/: test.yml
src/pydantic_ai_chat_ui/: __init__.py  messages.py  requests.py  streamed_messages.py  streaming.py  tools.py
src/pydantic_ai_chat_ui/messages/: full.py  shared.py  streamed.py
tests/: test_messages.py  test_requests.py  test_streamed_messages.py  test_streaming.py  test_tools.py
