[project]
name = "pydantic-ai-chat-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Sam Pratt", email = "samj.pratt@gmail.com" }]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"
